erster_teil erledigt

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,13 @@
 			<div>Eintrag 2</div>
 		</div>
 		<!-- Erste Hälfte -->
-		
+		<dif> <!-- Box -->
+			<div>Eintrag 3</div>
+			<div>Eintrag 4</div>
+			<button>Start</button>
+		</div>
+ 
+
 		<!-- Zweite Hälfte -->
-		
+
 	</body>
