zweiter Teil erledigt

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,15 @@
 			<div>Eintrag 2</div>
 		</div>
 		<!-- Erste Hälfte -->
-		
+
 		<!-- Zweite Hälfte -->
-		
+		<div>
+			<div>
+				<p> text </p>
+				<div>Eintrag 1</div>
+				<div>Eintrag 2</div>
+				<div>Eintrag 3</div>
+			</div>
+		</div>
 	</body>
+</html>
