erster_teil erledigt

--- a/www/index.html
+++ b/www/index.html
@@ -9,13 +9,14 @@
 			<div>Eintrag 2</div>
 		</div>
 		<!-- Erste Hälfte -->
-		<dif> <!-- Box -->
-			<div>Eintrag 3</div>
-			<div>Eintrag 4</div>
-			<button>Start</button>
+		<div> <!-- große Box -->
+			<div> <!-- Box -->
+				<p> Text in der Box</p>
+				<button>Start</button>
+				</div>
 		</div>
- 
 
 		<!-- Zweite Hälfte -->
 
 	</body>
+</html>
