--- a/www/index.html
+++ b/www/index.html
@@ -10,15 +10,16 @@
 			<div>Eintrag 1</div>
 			<div>Eintrag 2</div>
 		</div>
-		
+
 		<!-- Erste Hälfte -->
-		<div> <!-- große Box -->
-			<div> <!-- Box -->
-				<p> Text in der Box</p>
-				<button>Start</button>
+		<div id="grossebox"> <!-- große Box -->
+				<p id="headline"> Willkommen </p>
+			<div id="kleinebox"> <!-- kleine Box -->
+					<p id="text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
 			</div>
+			<button id="button">Start</button>
 		</div>
-		
+
 		<!-- Zweite Hälfte -->
 		<div>
 			<div>
@@ -42,14 +43,14 @@
 				float: left;
 				box-sizing: border-box;
 			}
-			
+
 			div {
 				border: 2px solid red;
 				width: 30%;
 			}
-			
+
 		</style>
 		-->
-		
+
 	</body>
 </html>
