menü halbwegs fertig

--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,24 @@
 	<body> <!-- Alles, was man sieht -->
 
 		<div id="menue"> <!-- Oben das Menü -->
-			<div>Eintrag 1</div>
-			<div>Eintrag 2</div>
+			<a href="#">
+				<div class="menue_eintrag">Eintrag 1</div>
+			</a>
+			<a href="#">
+				<div class="menue_eintrag">Eintrag 2</div>
+			</a>
+			<a href="#">
+				<div class="menue_eintrag">Eintrag 3</div>
+			</a>
+			<a href="#">
+				<div class="menue_eintrag">Eintrag 4</div>
+			</a>
+			<a href="#">
+				<div class="menue_eintrag">Eintrag 5</div>
+			</a>
+			<a href="#">
+				<div id="menue_text" class="menue_eintrag">Hier könnte Ihre Werbung stehen</div>
+			</a>
 		</div>
 		
 		<!-- Erste Hälfte -->
