--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 				<div class="menue_eintrag">Eintrag 5</div>
 			</a>
 			<a href="#">
-				<div id="menue_text" class="menue_eintrag">Hier könnte Ihre Werbung stehen</div>
+				<div id="menue_text">Hier könnte Ihre Werbung stehen</div>
 			</a>
 		</div>
 		
