--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 			<div>Eintrag 1</div>
 			<div>Eintrag 2</div>
 		</div>
-		
+
 		<!-- Erste Hälfte -->
 		<div> <!-- große Box -->
 			<div> <!-- Box -->
@@ -18,11 +18,13 @@
 				<button>Start</button>
 			</div>
 		</div>
-		
+
 		<!-- Zweite Hälfte -->
-		<div>
-			<div>
-				<p> text </p>
+		<div id="window2">
+			<div id="textfeld2">
+				<p id="text2"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam vol</p>
+			</div>
+			<div id="themenfeldbox">
 				<div class="themenfeld">Meditation</div>
 				<div class="themenfeld">Mathematik</div>
 				<div class="themenfeld">Yoga</div>
@@ -42,14 +44,14 @@
 				float: left;
 				box-sizing: border-box;
 			}
-			
+
 			div {
 				border: 2px solid red;
 				width: 30%;
 			}
-			
+
 		</style>
 		-->
-		
+
 	</body>
 </html>
