--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,10 @@
 		<title>MPS</title>
 		<link rel="stylesheet" href="style.css"/>
 	</head>
+	<!-- Startseite -->
 	<body> <!-- Alles, was man sieht -->
 
-		<div id="menue"> <!-- Oben das Menü -->
+		<div id="menue"> <!-- Hauptmenü -->
 			<a href="#">
 				<div class="menue_eintrag">Eintrag 1</div>
 			</a>
@@ -28,18 +29,18 @@
 		</div>
 
 		<!-- Erste Hälfte -->
-		<div id="grossebox"> <!-- große Box -->
-				<p id="headline"> Willkommen </p>
-			<div id="kleinebox"> <!-- kleine Box -->
-					<p id="text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+		<div id="WillkommenTextBox"> <!-- Willkommensüberschrift -->
+				<p id="Willkommenheadline"> Willkommen </p>
+			<div id="EinfuehrungsTextBox"> <!-- Einführungstext -->
+					<p id="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
 			</div>
-			<a href="#window2"><button id="button">Start</button></a>
+			<a href="#window2"><button id="Startbutton">Start</button></a>
 		</div>
 
 		<!-- Zweite Hälfte -->
 		<div id="window2">
-			<div id="textfeld2">
-				<p id="text2"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam vol</p>
+			<div id="ThemenauswahlTextBox">
+				<p id="Themenauswahl"> Such dir das Thema aus, das dich am meisten interessiert.</p>
 			</div>
 			<div id="themenfeldbox">
 				<div class="themenfeld">Meditation</div>
