--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 	<head> <!-- Zusatzinfo für den Browser-->
 		<title>MPS</title>
 		<link rel="stylesheet" href="style.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body> <!-- Alles, was man sieht -->
 
@@ -23,17 +24,17 @@
 				<div class="menue_eintrag">Eintrag 5</div>
 			</a>
 			<a href="#">
-				<div id="menue_text">Hier könnte Ihre Werbung stehen</div>
+<!--				<div id="menue_text">Hier könnte Ihre Werbung stehen</div>-->
 			</a>
 		</div>
 
 		<!-- Erste Hälfte -->
 		<div id="grossebox"> <!-- große Box -->
-				<p id="headline"> Willkommen </p>
+<!--				<p id="headline"> Willkommen </p>-->
 			<div id="kleinebox"> <!-- kleine Box -->
-					<p id="text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+<!--					<p id="text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>-->
 			</div>
-			<a href="#window2"><button id="button">Start</button></a>
+<!--			<a href="#window2"><button id="button">Start</button></a>-->
 		</div>
 
 		<!-- Zweite Hälfte -->
