gelbe seite erneuert (responsiveness), blaue seite leergeräumt (neuer designvorschlag, mit bild und unten bisschen text)

--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,9 @@
 				<p id="text2"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam vol</p>
 			</div>
 			<div id="themenfeldbox">
-				<div class="themenfeld">Meditation</div>
+				<div class="themenfeld">
+					<div>Meditation</div>
+				</div>
 				<div class="themenfeld">Mathematik</div>
 				<div class="themenfeld">Yoga</div>
 			</div>
