--- a/www/index.html
+++ b/www/index.html
@@ -48,8 +48,12 @@
 				</div>
 				<div class="themenfeld">Mathematik</div>
 				<div class="themenfeld">Yoga</div>
+				<div class="themenfeldzweitereihe">Rätsel</div>
+				<div class="themenfeldzweitereihe">Yoga</div>
+				<div class="themenfeldzweitereihe">Sketching</div>
+				<div class="themenfelddrittereihe">Design Thinking</div>
 			</div>
 		</div>
-<!-- test -->
+
 	</body>
 </html>
