--- a/www/index.html
+++ b/www/index.html
@@ -97,7 +97,7 @@
 				<div class="themenfeld">Mathematik</div>
 				<div class="themenfeld">Yoga</div>
 				<div class="themenfeldzweitereihe">Rätsel</div>
-				<div class="themenfeldzweitereihe">Yoga</div>
+				<div class="themenfeldzweitereihe">Mentalität</div>
 				<div class="themenfeldzweitereihe">Sketching</div>
 				<div class="themenfelddrittereihe">Design Thinking</div>
 			</div>
