paar kommentare hinzugefügt

--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,12 @@
 			</div>
 			
 			<div class="popup_content" id="popup_window">
-				<div id="popup_header">
+				<div id="popup_header"> <!-- eine unsichtbare Leiste oben, um Abstand zu erzeugen -->
 					<div id="popup_close_button" onclick="hidePopup()">
 						schließen
 					</div>
 				</div>
+				<!-- beispielhaft -->
 				<div class="themenfeld" style="float: none; width: 80%;">
 					Mathematik
 				</div>
@@ -51,11 +52,19 @@
 		</div>
 		
 		<script>
+			//showPopup() wird aufgerufen, sobald man den "Los"-Knopf drückt
+			//fügt dem popup_window die CSS-Klassenzugehörigkeit "show" hinzu, wodurch "visibility: visible" gesetzt wird
+
+			//showDropdown() funktioniert analog
+			//hidePopup() funktioniert genau umgekehrt
+			
+			
 			function showPopup() {
 				var popup = document.getElementById("popup_window");
 				popup.classList.add("show");
 			}
 
+			
 			function hidePopup() {
 				var popup = document.getElementById("popup_window");
 				popup.classList.remove("show");
