--- a/www/index.html
+++ b/www/index.html
@@ -94,7 +94,7 @@
 			</div>
 			<div id="themenfeldbox">
 				<div class="themenfeld">
-					<div>Meditation</div>
+				<!--<div>Meditation</div>-->	
 				</div>
 				<div class="themenfeld">Mathematik</div>
 				<div class="themenfeld">Yoga</div>
