Oberer Teil mit Brain Bild

--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,8 @@
     </head>
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
-        
-                <div id="menu"> <!-- Hauptmenü -->
+
+        <div id="menu"> <!-- Hauptmenü -->
             <div class = "active" id="popup_button" onclick="showPopup()">Los</div>
             <div class="popup_content" id="popup_window">
                 <div id="popup_header"> <!-- eine unsichtbare Leiste oben, um Abstand zu erzeugen -->
@@ -35,13 +35,15 @@
                     </div>
                 </div>
             </div>
+        </div><!-- Erste Hälfte -->
+        <div id ="imgContainer">
+            <h1>MPS Cooler Projekttitel</h1>
+            <img src ="brain.jpg" class="center">
         </div>
-
-        <!-- Erste Hälfte -->
         <div id="Hintergrund1"> <!-- Der Hintergrund des ersten Fensters auf der Startseite -->
-            <p id="headline1"> Willkommen </p>  
+            <h1 id="headline1"> Willkommen </h1> 
             <div id="EinfuehrungsTextBox"> <!-- In dieses Textfeld, kommt die Beschreibung der Seite -->
-                <p id="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
+                <p id="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende   Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
             </div>    <!--			<a href="#window2"><button id="button">Start</button></a>-->
         </div>
         <!-- Zweite Hälfte -->
