Bild oben eingefuegt zum 2. mal

--- a/www/index.html
+++ b/www/index.html
@@ -37,11 +37,11 @@
             </div>
         </div><!-- Erste Hälfte -->
         <div id ="imgContainer">
-            <h1>MPS Cooler Projekttitel</h1>
+            <h1 class="headline1">MPS Cooler Projekttitel</h1>
             <img src ="brain.jpg" class="center">
         </div>
         <div id="Hintergrund1"> <!-- Der Hintergrund des ersten Fensters auf der Startseite -->
-            <h1 id="headline1"> Willkommen </h1> 
+            <h1 class="headline1"> Willkommen </h1> 
             <div id="EinfuehrungsTextBox"> <!-- In dieses Textfeld, kommt die Beschreibung der Seite -->
                 <p id="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende   Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
             </div>    <!--			<a href="#window2"><button id="button">Start</button></a>-->
