--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
         <title>MPS</title>
         <link rel="stylesheet" href="style.css"/>
         <script src="scriptFile.js"></script>	
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
     </head>
