navbar in sticky and with 2 dropdown menus

--- a/www/index.html
+++ b/www/index.html
@@ -6,38 +6,31 @@
         <script src="scriptFile.js"></script>	
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
     </head>
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
-        <div id="menu"> <!-- Hauptmenü -->
-            <div class = "active" id="popup_button" onclick="showPopup()">Los</div>
-            <div class="popup_content" id="popup_window">
-                <div id="popup_header"> <!-- eine unsichtbare Leiste oben, um Abstand zu erzeugen -->
-                    <div id="popup_close_button" onclick="hidePopup()">schließen</div>
-                </div>
-                <!-- beispielhaft -->
-                <div class="themenfeld" style="float: none; width: 80%;">Mathematik</div>
-                <div class="themenfeld" style="float: none; width: 80%;">Yoga</div>
-            </div>
-            <div class="dropdown" onclick="showDropdown()">
-                <span class="dropdown_text">Über</span>
-                <div class="dropdown_content" id="dropdown_window">
-                    <div class="dropdown_entry">
-                        <span class="dropdown_text">
-                            <a href="#1" class="undecorated_link">Warum X?</a>
-                        </span>
-                    </div>
-                    <div class="dropdown_entry">
-                        <span class="dropdown_text">
-                            <a href="#2" class="undecorated_link"> Wie funktioniert's?</a>
-                        </span>
-                    </div>
+        <div id="navbar">
+            <div class="dropdown">
+                <button class="dropbtn">Los</button>
+                <div class="dropdown-content">
+                    <a href="#3">Mathematik</a>
+                    <a href="#1">Meditation</a>
+                    <a href="#2">Sketching</a>
+                    <a href="#3">Rätsel</a>
                 </div>
             </div>
-        </div><!-- Erste Hälfte -->
-        <div id ="imgContainer">
+            <div class="dropdown">
+                <button class="dropbtn">Über</button>
+                <div class="dropdown-content">
+                    <a href="#3">Warum?</a>
+                    <a href="#1">Wie funktioniert's?</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Erste Hälfte -->
+        <div id ="imgContainer" class="content">
             <h1 class="headline1">MPS Cooler Projekttitel</h1>
             <img src ="brain.jpg" class="center">
         </div>
