--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
         <link rel="stylesheet" href="style.css"/>
-        <script src="scriptFile.js"></script>	
+        <script src="navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -27,26 +27,68 @@
                     <a href="#1">Wie funktioniert's?</a>
                 </div>
             </div>
+
         </div>
 
         <!-- Erste Hälfte -->
-        <div id ="imgContainer" class="content">
-            <h1 class="headline1">MPS Cooler Projekttitel</h1>
+        <div id ="imgContainer">
+            <h1 class="headline">MPS Cooler Projekttitel</h1>
             <img src ="brain.jpg" class="center">
         </div>
         <div id="Hintergrund1"> <!-- Der Hintergrund des ersten Fensters auf der Startseite -->
-            <h1 class="headline1"> Willkommen </h1> 
+            <h1 class="headline"> Willkommen </h1> 
             <div id="EinfuehrungsTextBox"> <!-- In dieses Textfeld, kommt die Beschreibung der Seite -->
                 <p id="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende   Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
             </div>    <!--			<a href="#window2"><button id="button">Start</button></a>-->
         </div>
         <!-- Zweite Hälfte -->
         <div id="window2">
-            <div id="ThemenauswahlTextBox">
-                <p id="Themenauswahl"> Such dir das Thema aus, das dich am meisten interessiert.</p>
-            </div>
+            <!--
+<div id="ThemenauswahlTextBox">
+<p id="Themenauswahl"> Such dir das Thema aus, das dich am meisten interessiert.</p>
+</div>
+-->
+            <!--            https://www.w3schools.com/howto/howto_js_slideshow.asp-->
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <a href="#mathe">
+                        <img src="brain.jpg">
+                    </a>
+                    <div class="text">
+                        Mathematik</div>
+                </div>
+                <div class="mySlides fade">
+                    <a href="#meditation">
+                        <img src="brain.jpg">
+                    </a>
+                    <div class="text">Meditation</div>
+                </div>
+                <div class="mySlides fade">
+                    <a href="#sketching">
+                        <img src="brain.jpg">
+                    </a>
+                    <div class="text">Sketching</div>
+                </div>
+                <div class="mySlides fade">
+                    <a href="#raetsel">
+                        <img src="brain.jpg">
+                    </a>
+                    <div class="text">Rätsel</div>
+                </div>
 
-            ⁄
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                <!-- The dots/circles -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span> 
+                    <span class="dot" onclick="currentSlide(2)"></span> 
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                </div>
+            </div>
+            <script src="slideShow.js"></script>
 
 
             <div id="themenfeldbox">
