--- a/Meditation/Meditation.html
+++ b/Meditation/Meditation.html
@@ -2,8 +2,8 @@
 <html>
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
-        <link rel="stylesheet" href="style.css"/>
-        <script src="navBar.js"></script>
+        <link rel="stylesheet" href="Meditation.css"/>
+        <script src="www/navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -32,8 +32,8 @@
 
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
-            <h1 class="headline">MPS Cooler Projekttitel</h1>
-            <img src ="brain.jpg" class="center">
+            <h1 class="headline">Meditation</h1>
+            <img src ="Meditation.jpg" class="center">
         </div>
     </body>
 </html>
