--- a/Meditation/Meditation.html
+++ b/Meditation/Meditation.html
@@ -3,7 +3,7 @@
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
         <link rel="stylesheet" href="style.css"/>
-        <script src="navBar.js"></script>
+        <script src=""></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -14,7 +14,7 @@
             <div class="dropdown">
                 <button class="dropbtn">Los</button>
                 <div class="dropdown-content">
-                    <a href="#3">Mathematik</a>
+                    <a href="#1">Mathematik</a>
                     <a href="#1">Meditation</a>
                     <a href="#2">Sketching</a>
                     <a href="#3">Rätsel</a>
