NavBar verlinkt und in eigene File
NavBar verlinkt und in eigene File

--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -10,7 +10,7 @@
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
-        <div id="navbar">
+     <!--   <div id="navbar">
             <div class="dropdown">
                 <button class="dropbtn">Los</button>
                 <div class="dropdown-content">
@@ -29,7 +29,11 @@
             </div>
 
         </div>
-
+-->
+<div w3-include-HTML = "../navBar.html"></div>
+<script src="../w3-include-HTML.js"></script>
+        
+        
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
             <h1 class="headline">Sketching</h1>
