--- a/www/Startseite.html
+++ b/www/Startseite.html
@@ -2,7 +2,7 @@
 <html>
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="Startseite.css"/>
         <script src="navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +14,12 @@
             <div class="dropdown">
                 <button class="dropbtn">Los</button>
                 <div class="dropdown-content">
-                    <a href="#3">Mathematik</a>
-                    <a href="#1">Meditation</a>
-                    <a href="#2">Sketching</a>
-                    <a href="#3">Rätsel</a>
+                    <a href="Startseite.html">Startseite</a>
+                    <a href="../Mathematik/Mathematik.html">Mathematik</a>
+                    <a href="../Meditation/Meditation.html">Meditation</a>
+                    <a href="../Sketching/Sketching.html">Sketching</a>
+                    <a href="../Rätsel/Rätsel.html">Rätsel</a>
+                    <a href="../Design Thinking/DesignThinking.html">Design Thinking</a>
                 </div>
             </div>
             <div class="dropdown">
