ordner für html snippets und navBar aus den einzelnen Files entfernt

--- a/Mathematik/Mathematik.html
+++ b/Mathematik/Mathematik.html
@@ -1,5 +1,4 @@
-<!DOCTYPE>
-<html>
+
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
         <link rel="stylesheet" href="Mathematik.css"/>
@@ -10,6 +9,7 @@
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
+<!--
         <div id="navbar">
             <div class="dropdown">
                 <button class="dropbtn">Los</button>
@@ -29,6 +29,9 @@
             </div>
 
         </div>
+-->
+        <div w3-include-HTML="../navBar.html"></div>
+        <script src="../w3-include-HTML.js"></script>
 
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
@@ -36,4 +39,3 @@
             <img src ="Mathe.jpg" class="center">
         </div>
     </body>
-</html>
