Meditation Bild & Videos

--- a/Meditation/Meditation.html
+++ b/Meditation/Meditation.html
@@ -1,14 +1,11 @@
 <!DOCTYPE>
 <html>
     <head> <!-- Zusatzinfo für den Browser-->
+
         <title>MPS</title>
-<<<<<<< HEAD
-        <link rel="stylesheet" href="style.css"/>
-        <script src=""></script>
-=======
+
         <link rel="stylesheet" href="Meditation.css"/>
         <script src="www/navBar.js"></script>
->>>>>>> a713fd399849319e3a16b31d3fc7ecc366f26c39
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -35,8 +32,11 @@
 
         </div>
     <div> <!-- Überschrift + Beschreibung -->
-        <h1> Meditation </h1>
+        <h1 class="headline"> Meditation </h1>
         <p> tekaj </p>
+    </div>
+    <div id ="imgContainer">
+        <img src ="Meditation.jpg" class="center">
     </div>
     <div>
         <div class="slideshow-container">
@@ -71,8 +71,6 @@
                 <div class="text">Yoga</div>
             </div>
 
-<<<<<<< HEAD
-
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -83,12 +81,7 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
-=======
-        <!-- Erste Hälfte -->
-        <div id ="imgContainer">
-            <h1 class="headline">Meditation</h1>
-            <img src ="Meditation.jpg" class="center">
->>>>>>> ded7ea903d17f25a2be1906572ead5545398ba7e
+
         </div>
         <script src="../www/slideShow.js"></script>
     </div>
