navBar in eigene html file sowie slide show, passt noch nicht mach ich spaeter noch, das alles richtig zu verlinken

--- a/Design Thinking/DesignThinking.html
+++ b/Design Thinking/DesignThinking.html
@@ -10,25 +10,8 @@
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
-        <div id="navbar">
-            <div class="dropdown">
-                <button class="dropbtn">Los</button>
-                <div class="dropdown-content">
-                    <a href="#3">Mathematik</a>
-                    <a href="#1">Meditation</a>
-                    <a href="#2">Sketching</a>
-                    <a href="#3">Rätsel</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">Über</button>
-                <div class="dropdown-content">
-                    <a href="#3">Warum?</a>
-                    <a href="#1">Wie funktioniert's?</a>
-                </div>
-            </div>
-
-        </div>
+        <div w3-include-HTML="../html-snippets/navBar.html"></div>
+        <script src="../w3-include-HTML.js"></script>
 
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
