--- a/Mathematik/Mathematik.html
+++ b/Mathematik/Mathematik.html
@@ -31,7 +31,7 @@
         </div>
 -->
         
-        <div w3-include-HTML="../navBar.html"></div>
+        <div w3-include-HTML="../html-snippets/navBar.html"></div>
         <script src="../w3-include-HTML.js"></script>
 
         <!-- Erste Hälfte -->
