--- a/html-snippets/navBar/navBar.html
+++ b/html-snippets/navBar/navBar.html
@@ -1,7 +1,7 @@
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
-        <link rel="stylesheet" href="www/navBar.css"/>
-        <script src="www/navBar.js"></script>
+        <link rel="stylesheet" href="./navBar.css"/>
+        <script src="navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -11,7 +11,7 @@
     <div class="dropdown">
         <button class="dropbtn">Los</button>
         <div class="dropdown-content">
-            <a href="Startseite.html">Startseite</a>
+            <a href="../www/Startseite.html">Startseite</a>
             <a href="../Mathematik/Mathematik.html">Mathematik</a>
             <a href="../Meditation/Meditation.html">Meditation</a>
             <a href="../Sketching/Sketching.html">Sketching</a>
