--- a/Meditation/Meditation.html
+++ b/Meditation/Meditation.html
@@ -10,81 +10,58 @@
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->
 
-        <div id="navbar">
-            <div class="dropdown">
-                <button class="dropbtn">Los</button>
-                <div class="dropdown-content">
-                    <a href="#1">Mathematik</a>
-                    <a href="#1">Meditation</a>
-                    <a href="#2">Sketching</a>
-                    <a href="#3">Rätsel</a>
+        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+        <script src="../html-snippets/w3-include-HTML.js"></script>
+
+        
+        <div> <!-- Überschrift + Beschreibung -->
+            <h1> Meditation </h1>
+            <p> tekaj </p>
+        </div>
+        <div>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <iframe width= 80% height= 80%
+                            src="https://www.youtube-nocookie.com/embed/4Z1RPavOX3s"
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+                                                   encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
+
+                    <div class="text">Erwachsene</div>
+                </div>
+                <div class="mySlides fade">
+                    <iframe width= 80% height= 80%
+
+                            src="https://www.youtube-nocookie.com/embed/dsgOgpf5d3A"
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+                                                   encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
+
+                    <div class="text">Kinder</div>
+                </div>
+                <div class="mySlides fade">
+                    <iframe width= 80% height= 80%
+
+                            src="https://www.youtube-nocookie.com/embed/TAbH1yusgRo"
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+                                                   encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
+
+                    <div class="text">Yoga</div>
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                <!-- The dots/circles -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn">Über</button>
-                <div class="dropdown-content">
-                    <a href="#3">Warum?</a>
-                    <a href="#1">Wie funktioniert's?</a>
-                </div>
-            </div>
+            <script src="../www/slideShow.js"></script>
         </div>
-    <div> <!-- Überschrift + Beschreibung -->
-        <h1> Meditation </h1>
-        <p> tekaj </p>
-    </div>
-    <div>
-        <div class="slideshow-container">
-            <div class="mySlides fade">
-                <iframe width= 80% height= 80%
-                <iframe width="560" height="315"
-                src="https://www.youtube-nocookie.com/embed/4Z1RPavOX3s"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-                encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-                </iframe>
-                <div class="text">Erwachsene</div>
-            </div>
-            <div class="mySlides fade">
-                <iframe width= 80% height= 80%
-                <iframe width="560" height="315"
-                src="https://www.youtube-nocookie.com/embed/dsgOgpf5d3A"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-                encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-                </iframe>
-                <div class="text">Kinder</div>
-            </div>
-            <div class="mySlides fade">
-                <iframe width= 80% height= 80%
-                <iframe width="560" height="315"
-                src="https://www.youtube-nocookie.com/embed/TAbH1yusgRo"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-                encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-                </iframe>
-                <div class="text">Yoga</div>
-            </div>
-
-<<<<<<< HEAD
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-            <!-- The dots/circles -->
-            <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-            </div>
-=======
-        <!-- Erste Hälfte -->
-        <div id ="imgContainer">
-            <h1 class="headline">Meditation</h1>
-            <img src ="Meditation.jpg" class="center">
->>>>>>> ded7ea903d17f25a2be1906572ead5545398ba7e
-        </div>
-        <script src="../www/slideShow.js"></script>
-    </div>
     </body>
 </html>
