--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -10,30 +10,10 @@
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
-     <!--   <div id="navbar">
-            <div class="dropdown">
-                <button class="dropbtn">Los</button>
-                <div class="dropdown-content">
-                    <a href="#3">Mathematik</a>
-                    <a href="#1">Meditation</a>
-                    <a href="#2">Sketching</a>
-                    <a href="#3">Rätsel</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">Über</button>
-                <div class="dropdown-content">
-                    <a href="#3">Warum?</a>
-                    <a href="#1">Wie funktioniert's?</a>
-                </div>
-            </div>
+        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+        <script src="../html-snippets/w3-include-HTML.js"></script>
 
-        </div>
--->
-<div w3-include-HTML = "../navBar.html"></div>
-<script src="../w3-include-HTML.js"></script>
-        
-        
+
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
             <h1 class="headline">Sketching</h1>
